--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.0",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.2"
   },
   "scripts": {
